fix: option item text-align: center bug (#31)

--- a/src/operation-menu/style/index.less
+++ b/src/operation-menu/style/index.less
@@ -5,4 +5,7 @@
 
 .operation-menu {
   padding: 16px 8px;
+  ul.gio-menu {
+    text-align: left;
+  }
 }
